--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,5 +1,8 @@
+.content-container {
+  position: relative;
+}
+
 .section-top {
-  width: 100%;
   height: 90vh;
   background: url(/assets/images/desktop/image-hero.jpg);
   background-size: cover;
@@ -37,17 +40,17 @@
 }
 
 .message-container {
-    height: 70vh;
-    display: flex;
-    align-items: center;
+  height: 70vh;
+  display: flex;
+  align-items: center;
 
-    span {
-        font-family: 'Josefin Sans';
-        width: 500px;
-        border: 3px solid var(--white);
-        padding: .5em 1.3em .5em .5em;
-        font-size: 3em;
-        text-transform: uppercase;
-        letter-spacing: .05cm;
-    }
+  span {
+    font-family: "Josefin Sans";
+    width: 500px;
+    border: 3px solid var(--white);
+    padding: 0.5em 1.3em 0.5em 0.5em;
+    font-size: 3em;
+    text-transform: uppercase;
+    letter-spacing: 0.05cm;
+  }
 }
