--- a/src/app/components/gallery-creations/gallery-creations.component.scss
+++ b/src/app/components/gallery-creations/gallery-creations.component.scss
@@ -30,6 +30,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 3.5em;
+    margin-bottom: 12em;
     
     .image {
         // margin-right: 2.6em;
