--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -27,6 +27,32 @@
     li {
       list-style-type: none;
       cursor: pointer;
+      position: relative;
+    }
+  }
+
+  li:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: -5px;
+    left: 0;
+    background-color: var(--white);
+    visibility: hidden;
+  }
+
+  li:hover:before {
+    visibility: visible;
+    animation: anima_border 0.3s ease-in-out;
+  }
+  
+  @keyframes anima_border {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 100%;
     }
   }
 }
@@ -40,6 +66,12 @@
   .social-media {
     img {
       margin-left: 2em;
+      position: relative;
+    }
+
+    img:hover {
+      opacity: .8;
+      transition: .3s;
     }
   }
 
