--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -34,6 +34,32 @@
     li {
       list-style-type: none;
       cursor: pointer;
+      position: relative;
+    }
+
+    li:before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      bottom: -3px;
+      left: 0;
+      background-color: var(--white);
+      visibility: hidden;
+    }
+
+    li:hover:before {
+      visibility: visible;
+      animation: anima_border 0.3s ease-in-out;
+    }
+    
+    @keyframes anima_border {
+      0% {
+        width: 0;
+      }
+      100% {
+        width: 100%;
+      }
     }
   }
 }
